--- a/index.html
+++ b/index.html
@@ -34,17 +34,22 @@
           <span class="off">This feild is required </span>
         </div>
 
-        <div class="term-rate form-flex" id="term-rate-input-wrap">
+        <div class="term-rate-container form-flex" id="term-rate-input-wrap">
 
-          <span class="input-title">Mortgage Term</span>
-          <input type="number" name="years" id="years" class="input-group"  > 
-          <p class="unit term-rate-unit years">years</p>
-          <span class=" off">This feild is required </span>
+          <div class="term-rate left">
+            <span class="input-title">Mortgage Term</span>
+            <input type="number" name="years" id="years" class="input-group"  > 
+            <p class="unit term-rate-unit years">years</p>
+            <span class=" off">This feild is required </span>
+          </div>
 
-          <span class="input-title">Interest Rate</span>
-          <input type="number" name="%" id="percentage" class="input-group" step="0.01" >
-          <p class="unit term-rate-unit rate">%</p>
-          <span class="off percentage">This feild is required </span>
+          <div class="term-rate right">
+            <span class="input-title">Interest Rate</span>
+            <input type="number" name="%" id="percentage" class="input-group" step="0.01" >
+            <p class="unit term-rate-unit rate">%</p>
+            <span class="off percentage">This feild is required </span>
+          </div>
+
         </div>
 
         <div class="type form-flex">
@@ -78,7 +83,7 @@
     <!-- Empty results start -->
      <!-- right card -->
       
-    <div class="right-card">
+    <div class="right-card ">
 
       <div class="img-container">
         <img src="./assets/images/illustration-empty.svg" alt="" srcset="">
@@ -96,7 +101,7 @@
     <!-- Empty results end -->
   
     <!-- Completed results start -->
-    <div class="calculation-result off">
+    <div class="calculation-result off ">
       <h1>Your results</h1>
   
       <p class="result-content">
